<?xml version="1.0"?><!--
  ~ Copyright 2017 Julian Ostarek
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">Style Music</string>
    <string name="app_description">A fresh and beautiful way to listen to music</string>
    <!-- General -->
    <string name="must_not_be_empty">Must not be empty</string>
    <string name="description">Description</string>
    <string name="stream_url">Stream url</string>
    <string name="title">Title</string>
    <string name="unknown">Unknown</string>
    <string name="favorites">Favorites</string>
    <string name="minutes">Minutes</string>
    <string name="all">All</string>
    <string name="no_network">No network connection!</string>
    <string name="tag_editor">Tag Editor</string>
    <string name="Links">Additional Links</string>
    <string name="please_wait">Please wait</string>
    <string name="first_song">Play your first song</string>
    <string name="last_added">Last Added</string>
    <string name="most_played">Most Played</string>
    <string name="name">Name</string>
    <string name="link">Link</string>
    <string name="results">Results</string>
    <string name="loading">Loading…</string>
    <string name="empty_text">You don\'t have any</string>
    <string name="no_music">There\'s no music on this device</string>
    <plurals name="numberOfSongs">
        <item quantity="one">%d song</item>
        <item quantity="other">%d songs</item>
    </plurals>
    <plurals name="numberOfAlbums">
        <item quantity="one">%d album</item>
        <item quantity="other">%d albums</item>
    </plurals>
    <!-- Search -->
    <string name="search_input_hint">Search through your Library</string>
    <string name="search_motivation">Start searching to get results</string>
    <!-- Section names -->
    <string name="home">Home</string>
    <string name="library">Library</string>
    <string name="folders">Folders</string>
    <string name="other">Other</string>
    <string name="about">About</string>
    <string name="support">Support the development</string>
    <string name="settings">Settings</string>
    <!-- General actions -->
    <string name="dismiss">Dismiss</string>
    <string name="ok">OK</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="more">More</string>
    <string name="voice_input">Voice Input</string>
    <string name="add_to_favorites">Add to Favorites</string>
    <string name="remove_from_favorites">Remove from Favorites</string>
    <string name="save">Save</string>
    <string name="add_image">Add an image</string>
    <string name="image_added">Image added</string>
    <string name="delete">Delete</string>
    <!-- Radio -->
    <string name="saving_station">Saving station</string>
    <string name="station_saved">Station saved</string>
    <string name="problem_saving_station">There was a problem saving that station</string>
    <string name="nearby">Nearby</string>
    <string name="radio">Radio</string>
    <string name="add_station">Add custom station</string>
    <string name="add_station_text">Enter name and link for the new station</string>
    <string name="search_stations">Search Stations</string>
    <string name="custom_station">Create a custom station</string>
    <string name="saved">Saved</string>
    <string name="no_stations_saved">No stations saved</string>
    <string name="insert_station">Insert station</string>
    <string name="modify_station">Modify station</string>
    <string name="find_station_for_song">Find a station that plays your song</string>
    <!-- Playlists -->
    <string name="delete_playlist">Delete this playlist</string>
    <string name="delete_playlist_confirmation">Are you sure you want to delete this playlist?</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="new_playlist">New playlist</string>
    <string name="new_playlist_desc">Enter a name for the new playlist</string>
    <string name="playlists">Playlists</string>
    <string name="rename_playlist">Rename playlist</string>
    <string name="rename_playlist_desc">Enter a new name for this playlist</string>
    <string name="change_image">Change image</string>
    <!-- Albums -->
    <string name="show_album">Show album</string>
    <string name="albums">Albums</string>
    <!-- Artists -->
    <string name="show_artist">Show Artist</string>
    <string name="no_biography">No biography for this artist</string>
    <string name="artist_about">About</string>
    <string name="bio">Biography</string>
    <string name="artists">Artists</string>
    <string name="artist">Artist</string>
    <string name="no_bio">There is no biography for this artist</string>
    <!-- Songs -->
    <string name="tracks">Tracks</string>
    <string name="songs">Songs</string>
    <!-- Queue -->
    <string name="play_next">Play Next</string>
    <string name="add_to_queue">Add to queue</string>
    <string name="nothing_up_next">Nothing Up Next</string>
    <string name="up_next">Up Next</string>
    <string name="playing">Playing</string>
    <string name="queue">Queue</string>
    <!-- Playback -->
    <string name="connecting">Connecting</string>
    <string name="connecting_device">Connecting to the cast device</string>
    <string name="share_this_track">Share this Track</string>
    <string name="google_cast">Google Cast</string>
    <string name="play">Play</string>
    <string name="shuffle">Shuffle</string>
    <!-- About section -->
    <string name="google_plus">Google+</string>
    <string name="github">Github</string>
    <string name="pr_support">PR/Support</string>
    <string name="designer">Designer</string>
    <string name="developer">Developer</string>
    <string name="created_by">Created by</string>
    <string name="website">Website</string>
    <string name="thanks_to">Thanks to</string>
    <string name="licenses">Licenses</string>
    <string name="everything_else">Everything else</string>
    <string name="rate_us">Rate us</string>
    <!-- Settings -->
    <string name="start_page_title">Start page</string>
    <string-array name="start_page">
        <item>Home</item>
        <item>Library</item>
        <item>Folders</item>
    </string-array>
    <string name="allowed_network_type_title">Allowed network type</string>
    <string-array name="allowed_network_type">
        <item>Wifi</item>
        <item>Cellular</item>
        <item>Wifi + Cellular</item>
    </string-array>
    <string name="lastfm_image_size_title">Last.fm image size</string>
    <string name="wipe_playlist_db">Wipe playlist images database</string>
    <string name="wipe_playlist_db_sum">This will not delete your images</string>
    <string name="wipe_artists_db">Wipe artist biographies and images database</string>
    <string name="wipe_artists_db_sum">This will delete downloaded biographies and images</string>
    <string name="wipe_radio_db">Wipe radio database</string>
    <string name="wipe_radio_db_sum">This will delete the saved stations as well as their respective images</string>
    <string name="pref_category_general">General</string>
    <string name="pref_category_ui">User Interface</string>
    <string name="artist_metadata">Auto-download artist metadata</string>
    <string name="artist_metadata_sum">Style Music would like to download additional data for your artists (such as biographies &amp; images) from last.fm</string>
    <!-- Permissions -->
    <string name="storage_permission">Storage permission</string>
    <string name="storage_permission_reason">Style Music must be granted storage access in order to be able to list and play your music</string>
    <string name="enable">Enable</string>
    <string name="welcome">Welcome to Style Music</string>
    <string name="small_screen_mode">Small screen mode</string>
    <string name="small_screen_mode_sum">This toggles the visibility of the volume slider in the now-playing screen</string>
    <string name="community">Community</string>
    <string name="lockscreen_album_art">Show album art as lockscreen wallpaper</string>
    <string name="lockscreen_album_art_sum">This might not be available on your device</string>
    <string name="lockscreen_album_art_blur">Blur album art on the lockscreen</string>
    <string name="playback">Playback</string>
    <string name="gapless_playback">Enable gapless playback</string>
    <string name="gapless_playback_sum">Switch between songs smoothly</string>
    <string name="delete_song">Delete song</string>
    <string name="no_stations_found">No stations found</string>
</resources>
