<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2017 Julian Ostarek
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group>
        <item
            android:id="@+id/popup_artist"
            android:title="@string/show_artist" />
        <item
            android:id="@+id/popup_album"
            android:title="@string/show_album" />
        <item
            android:id="@+id/popup_add_to_playlist"
            android:title="@string/add_to_playlist" />
        <item
            android:id="@+id/popup_play_next"
            android:title="@string/play_next" />
        <item
            android:id="@+id/popup_add_to_queue"
            android:title="@string/add_to_queue" />
        <item
            android:id="@+id/popup_add_to_favorites"
            android:title="@string/add_to_favorites" />
        <item
            android:id="@+id/popup_delete"
            android:title="@string/delete_song"
            android:visible="false" />
    </group>

</menu>