<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2017 Julian Ostarek
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/dialog_modify_station_title_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_weight="1"
        app:layout_constraintBottom_toBottomOf="@+id/dialog_modify_station_title_til"
        app:layout_constraintLeft_toLeftOf="parent"
        app:srcCompat="@drawable/ic_create_black_transparent_24dp"
        app:layout_constraintTop_toTopOf="@+id/dialog_modify_station_title_til"
        android:layout_marginTop="0dp"
        app:layout_constraintVertical_bias="0.551" />

    <ImageView
        android:id="@+id/dialog_modify_station_description_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:layout_weight="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/dialog_modify_station_description_til"
        app:srcCompat="@drawable/ic_info_outline_black_transparent_24dp"
        app:layout_constraintBottom_toBottomOf="@+id/dialog_modify_station_description_til"
        android:layout_marginBottom="0dp"
        app:layout_constraintVertical_bias="0.551" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/dialog_modify_station_description_til"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toRightOf="@+id/dialog_modify_station_description_icon"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_modify_station_title_til">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/dialog_modify_station_description_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description" />
    </android.support.design.widget.TextInputLayout>

    <ImageView
        android:id="@+id/dialog_modify_station_stream_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_weight="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:srcCompat="@drawable/ic_radio_black_transparent_24dp"
        app:layout_constraintBottom_toBottomOf="@+id/dialog_modify_station_stream_til"
        android:layout_marginBottom="0dp"
        app:layout_constraintTop_toTopOf="@+id/dialog_modify_station_stream_til"
        android:layout_marginTop="0dp"
        app:layout_constraintVertical_bias="0.517" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/dialog_modify_station_stream_til"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toRightOf="@+id/dialog_modify_station_stream_icon"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_modify_station_description_til">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/dialog_modify_station_stream_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/stream_url" />
    </android.support.design.widget.TextInputLayout>

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_weight="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:srcCompat="@drawable/ic_insert_photo_black_transparent_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="0dp"
        app:layout_constraintTop_toTopOf="@+id/dialog_modify_station_image_text"
        android:layout_marginTop="0dp" />

    <TextView
        android:id="@+id/dialog_modify_station_image_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="16dp"
        android:ellipsize="start"
        android:gravity="center_vertical"
        android:maxLines="1"
        android:text="@string/add_image"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/imageView4"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_modify_station_stream_til" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/dialog_modify_station_title_til"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/dialog_modify_station_title_icon"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/dialog_modify_station_title_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title" />

    </android.support.design.widget.TextInputLayout>

</android.support.constraint.ConstraintLayout>