<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2017 Julian Ostarek
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_nowplaying_queue_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardElevation="0dp"
    app:cardCornerRadius="0dp"
    android:orientation="vertical"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <TextView
        android:id="@+id/fragment_nowplaying_queue_playing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingStart="16dp"
        android:alpha="0.0"
        tools:alpha="1.0"
        android:text="@string/playing"
        android:textAppearance="@style/ItemTitleTextAppearance"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/fragment_nowplaying_queue_constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true">

        <ImageView
            android:id="@+id/fragment_nowplaying_queue_playing_play_circle_colorable"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:padding="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_play_circle_filled_black_24dp" />

        <TextView
            android:id="@+id/fragment_nowplaying_queue_playing_index"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="72dp"
            android:fontFamily="sans-serif-medium"
            android:text="1"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/secondary_text_color_light"
            android:textSize="@dimen/text_size_default"
            app:layout_constraintBottom_toBottomOf="@+id/fragment_nowplaying_queue_playing_play_circle_colorable"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@+id/fragment_nowplaying_queue_playing_play_circle_colorable" />

        <TextView
            android:id="@+id/fragment_nowplaying_queue_playing_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="112dp"
            android:layout_toStartOf="@+id/fragment_nowplaying_queue_playing_duration"
            android:paddingBottom="20dp"
            android:singleLine="true"
            android:text="@string/unknown"
            android:textAppearance="@style/ItemTitleTextAppearance"
            app:layout_constraintBottom_toBottomOf="@+id/fragment_nowplaying_queue_playing_play_circle_colorable"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/fragment_nowplaying_queue_playing_duration"
            app:layout_constraintTop_toTopOf="@+id/fragment_nowplaying_queue_playing_play_circle_colorable"
            tools:layout_constraintBottom_creator="1"
            tools:layout_constraintTop_creator="1" />

        <TextView
            android:id="@+id/fragment_nowplaying_queue_playing_subtitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="112dp"
            android:paddingTop="20dp"
            android:singleLine="true"
            android:text="@string/unknown"
            android:textAppearance="@style/ItemSubtitleTextAppearance"
            app:layout_constraintBottom_toBottomOf="@+id/fragment_nowplaying_queue_playing_play_circle_colorable"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/fragment_nowplaying_queue_playing_duration"
            app:layout_constraintTop_toTopOf="@+id/fragment_nowplaying_queue_playing_play_circle_colorable"
            tools:layout_constraintBottom_creator="1"
            tools:layout_constraintTop_creator="1" />

        <TextView
            android:id="@+id/fragment_nowplaying_queue_playing_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/secondary_text_color_light"
            android:textSize="@dimen/text_size_subtitle"
            app:layout_constraintBottom_toBottomOf="@+id/fragment_nowplaying_queue_playing_play_circle_colorable"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/fragment_nowplaying_queue_playing_play_circle_colorable"
            tools:text="00:00" />

        <TextView
            android:id="@+id/fragment_nowplaying_queue_up_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="28dp"
            android:text="@string/up_next"
            android:textAppearance="@style/ItemTitleTextAppearance"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_nowplaying_queue_playing_play_circle_colorable" />

        <View
            android:layout_marginTop="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_nowplaying_queue_playing_play_circle_colorable"
            android:foreground="?android:attr/listDivider"
            android:layout_height="1dp"
            android:layout_width="0dp"
            tools:layout_editor_absoluteX="0dp" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/fragment_nowplaying_queue"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_nowplaying_queue_up_next"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1" />

        <View
            android:background="@drawable/fading_edge"
            app:layout_constraintStart_toStartOf="@+id/fragment_nowplaying_queue"
            app:layout_constraintEnd_toEndOf="@+id/fragment_nowplaying_queue"
            app:layout_constraintTop_toTopOf="@+id/fragment_nowplaying_queue"
            android:layout_width="0dp"
            android:layout_height="8dp" />

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>